@@ -35,6 +35,7 @@ examples/create_and_print_value_time.pl
 examples/fixture_create_and_print_form_wd_dogczechsingular.pl
 examples/fixture_create_and_print_item_wd_dog.pl
 examples/fixture_create_and_print_mediainfo_commons_imageofhuman.pl
+examples/fixture_create_and_print_mediainfo_snak_commons_depicts_human.pl
 examples/fixture_create_and_print_mediainfo_statement_commons_depicts_human.pl
 examples/fixture_create_and_print_reference_wd_url.pl
 examples/fixture_create_and_print_reference_wd_viaf.pl
