@@ -1,4 +1,6 @@
 0.31
+ - Add doc for
+   Test::Shared::Fixture::Wikibase::Datatype::MediainfoSnak::Commons::Depicts::Human.
  - Add SEE ALSO link to Wikibase::Datatype::Snak.
 
 0.30 2023-04-26T10:57:20+02:00
